<resources>
    <string name="app_name">VSMTI Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vijesti">Vijesti</string>
    <string name="studijski_programi">Studijski programi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="www_vsmti_hr">www.vsmti.hr</string>
    <string name="po_etna">Početna</string>
    <string name="kontakt">Kontakt</string>

    <string name="googleMapsApiKey">AIzaSyD75CXPq0KBy_41p0jIX_nMXUKgGsH5RHs</string>
    <string name="virtualna_etnja">Virtualna šetnja</string>
    <string name="visoka_kola_za_menad_ment_u_turizmnu_i_informatici_u_virovitici">Visoka škola za menadžment u turizmnu i informatici u Virovitici</string>
</resources>